# affairon

./: .gitignore  AGENTS.md  CONV_COMMIT.md  HOW_TO.md  INFRASTRUCTURE.md  PLAN.md  PRD.md  README.md  README_cn.md  TECH_DISCUZ.md  TODO.md  pyproject.toml
.ai/: CONV_COMMIT.md  HOW_TO.md  HOW_TO_en.md  INFRASTRUCTURE.md  PRD.md  TECH_DISCUZ.md  TODO.md
affairon/: __init__.py  _types.py  affair.py  affairs.py  async_dispatcher.py  aware.py  base_dispatcher.py  composer.py  dispatcher.py  exceptions.py  registry.py  utils.py
affairon/fairun/: __init__.py  cli.py
eventd/: _types.py  base_dispatcher.py  dispatcher.py  event.py  exceptions.py  utils.py
examples/egg/eggsample/: host.py  lib.py  pyproject.toml
examples/egg/eggsample-spam/: lib.py  pyproject.toml
examples/egg/eggsample-spam/eggsample_spam/: lib.py
examples/egg/eggsample/eggsample/: affairs.py  host.py  lib.py
examples/eggsample/: affairs.py  host.py
src/affairon/: README.md  pyproject.toml
src/affairon/affairon/: __init__.py  _types.py  affairs.py  associate.py  async_dispatcher.py  aware.py  base_dispatcher.py  composer.py  dispatcher.py  listen.py  locator.py  node.py  registry.py  runtime.py  utils.py
src/affairon/affairon/fairun/: __init__.py  cli.py  stubgen.py
src/affairon/examples/duel/: README.md
src/affairon/examples/duel/duelsample/: pyproject.toml
src/affairon/examples/duel/duelsample/duelsample/: host.py  nodes.py
src/affairon/examples/egg/eggsample/: pyproject.toml
src/affairon/examples/egg/eggsample-spam/: pyproject.toml
src/affairon/examples/egg/eggsample-spam/eggsample_spam/: lib.py
src/affairon/examples/egg/eggsample/eggsample/: lib.py
src/affairon/examples/nodes/: README.md
src/affairon/examples/nodes/nodesample/: pyproject.toml
src/affairon/examples/nodes/nodesample/nodesample/: app.py  app.pyi  host.py  host.pyi  nodes.py  nodes.pyi
src/affairon/tests/: demo_annotations.py  demo_annotations_check.py  test_affair_aware.py  test_associate.py  test_async_dispatcher.py  test_decorator.py  test_fairun_cli.py  test_injection_compat.py  test_locator.py  test_node.py  test_registry.py  test_runtime.py  test_stubgen.py
src/conceron/: README.md  pyproject.toml
src/eventd/: __init__.py  _types.py  async_dispatcher.py  dispatcher.py  event.py  registry.py
tests/: conftest.py  test_affair_aware.py  test_affairs.py  test_async_dispatcher.py  test_composer.py  test_core.py  test_decorator.py  test_dispatcher.py  test_registry.py  test_unregister.py
tests/integration/: test_full_sync_flow.py
tests/unit/: test_async_emit.py  test_event.py  test_exceptions.py  test_registration.py  test_registry.py  test_shutdown.py  test_sync_emit.py
typings/nodesample/: _type_check.pyi  _type_probe.pyi  host.pyi  nodes.pyi
