[project]
name = "affairon"
version = "0.1.0"
description = "A flexible affair-driven framework for Python supporting both sync and async modes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Joxos" }
]
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "networkx>=3.6.1",
    "packaging>=23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fairun = "affairon.fairun.cli:main"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["affairon"]

[tool.ruff.lint.per-file-ignores]
"affairon/__init__.py" = ["E402"]  # logger.disable() must precede package imports

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
exclude = ["**/.venv"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.1.0",
    "pyright>=1.1.408",
]

