[project]
name = "conceron"
version = "0.1.0"
description = "Concern-driven runtime composition for affair-driven systems"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Joxos" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conceron"]

[tool.hatch.build.targets.sdist]
include = [
    "conceron",
    "README.md",
]
