[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodesample"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["affairon"]

[tool.uv.sources]
nodesample = { workspace = true, editable = true }
affairon = { path = "../../../", editable = true }

[tool.uv.workspace]
members = [
    ".",
]

[tool.affairon]
local_plugins = ["nodesample.host"]

[dependency-groups]
dev = [
    "affairon",
    "basedpyright>=1.39.0",
    "nodesample",
]
